--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3'
 
 services:
-  proxy:
+  balancer:
+    container_name: 'balancer'
     image: nginx
     volumes:
-      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./balancer/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 8080:80
     networks:
-      balancer:
-        ipv4_address: 192.168.192.1
+      - balancer
 
   web1:
     image: nginx
@@ -19,8 +19,7 @@ services:
     ports:
       - 7000:80
     networks:
-      balancer:
-        ipv4_address: 192.168.192.2
+      - balancer
 
   web2:
     image: nginx
@@ -30,12 +29,8 @@ services:
     ports:
       - 7001:80
     networks:
-      balancer:
-        ipv4_address: 192.168.192.3
+      - balancer
 
 networks:
   balancer:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 192.168.192.0/24
+    driver: "bridge"
